--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "@angular/http": "^5.2.0",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
-    "@angular/platform-server": "^5.0.0-rc.2",
+    "@angular/platform-server": "^5.2.0",
     "@angular/router": "^5.2.0",
-    "@nguniversal/express-engine": "^5.0.0-beta.1",
-    "@nguniversal/module-map-ngfactory-loader": "^5.0.0-beta.1",
+    "@nguniversal/express-engine": "^5.2.0",
+    "@nguniversal/module-map-ngfactory-loader": "^5.2.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
